@@ -31,7 +31,9 @@ Options:
 Output
 ------
 
-The results are hydrogen bond data per frame (# indicates comments that are not part of the output)::
+The results are hydrogen bond data per frame (# indicates comments
+that are not part of the output), stored in
+:attr:`HydrogenBondAnalysis.timeseries`::
 
     results = [
         [ # frame 1
@@ -164,6 +166,51 @@ Classes
 .. autoclass:: HydrogenBondAnalysis
    :members:
 
+   .. attribute:: timeseries
+
+      Results of the hydrogen bond analysis, stored for each frame. In
+      the following description, # indicates comments that are not
+      part of the output::
+
+        results = [
+            [ # frame 1
+               [ # hbond 1
+                  <donor index>, <acceptor index>, <donor string>, <acceptor string>, <distance>, <angle>
+               ],
+               [ # hbond 2
+                  <donor index>, <acceptor index>, <donor string>, <acceptor string>, <distance>, <angle>
+               ],
+               ....
+            ],
+            [ # frame 2
+              [ ... ], [ ... ], ...
+            ],
+            ...
+        ]
+
+   .. attribute:: table
+
+      A normalised table of the data in
+      :attr:`HydrogenBondAnalysis.timeseries`, generated by
+      :meth:`HydrogenBondAnalysis.generate_table`. It is a
+      :class:`numpy.recarray` with the following columns:
+
+          0. "time"
+          1. "donor_idx"
+          2. "acceptor_idx"
+          3. "donor_resnm"
+          4. "donor_resid"
+          5. "donor_atom"
+          6. "acceptor_resnm"
+          7. "acceptor_resid"
+          8. "acceptor_atom"
+          9. "distance"
+          10. "angle"
+
+      It takes up more space than
+      :attr:`~HydrogenBondAnalysis.timeseries` but it is easier to
+      analyze and to import into databases (e.g. using recsql_).
+
 """
 
 from __future__ import with_statement
@@ -209,7 +256,7 @@ class HydrogenBondAnalysis(object):
     #: default heavy atom names whose hydrogens are treated as *donors*
     #: (see :ref:`Default atom names for hydrogen bonding analysis`)
     #: Use the keyword *donors* to add a list of additional donor names.
-    DEFAULT_DONORS = tuple(set(['N', 'OH2', 'OW', 'NE', 'NH1' 'NH2', 'ND2', 'SG', 'NE2',
+    DEFAULT_DONORS = tuple(set(['N', 'OH2', 'OW', 'NE', 'NH1', 'NH2', 'ND2', 'SG', 'NE2',
                                'ND1', 'NE2', 'ND1', 'NE2', 'ND1', 'NE2', 'NZ', 'OG', 'OG1',
                                'NE1', 'OH',]))
 
@@ -220,8 +267,9 @@ class HydrogenBondAnalysis(object):
                                    'ND1', 'NE2', 'NE2', 'ND1', 'SD', 'OG', 'OG1', 'OH',]))
 
     def __init__(self, universe, selection1='protein', selection2='all', selection1_type='both',
-                update_selection1=False, update_selection2=False, filter_first=True, distance=3.0, angle=120.0,
-                donors=None, acceptors=None):
+                 update_selection1=False, update_selection2=False, filter_first=True,
+                 distance=3.0, angle=120.0,
+                 donors=None, acceptors=None):
         """Set up calculation of hydrogen bonds between two selections in a universe.
 
         :Arguments:
@@ -240,9 +288,14 @@ class HydrogenBondAnalysis(object):
           *filter_first*
             Filter selection 2 first to only atoms 3*distance away
           *distance*
-            Distance cutoff for hydrogen bonds
+            Distance cutoff for hydrogen bonds; only interactions with a H-A distance
+            <= *distance* (and the appropriate D-H-A angle, see *angle*) are
+            recorded.
           *angle*
-            Angle cutoff for hydrogen bonds
+            Angle cutoff for hydrogen bonds; an ideal H-bond has an angle of
+            180º.  A hydrogen bond is only recorded if the D-H-A angle is
+            >=  *angle*. The default of 120º also finds fairly non-specific
+            hydrogen interactions and a possibly better value is 150º.
           *donors*
             Extra H donor atom types (in addition to those in
             :attr:`~HydrogenBondAnalysis.DEFAULT_DONORS`), must be a sequence.
@@ -268,8 +321,8 @@ class HydrogenBondAnalysis(object):
             donors = []
         if acceptors is None:
             acceptors = []
-        self.donors = self.DEFAULT_DONORS + tuple(donors)
-        self.acceptors = self.DEFAULT_ACCEPTORS + tuple(acceptors)
+        self.donors = tuple(set(self.DEFAULT_DONORS).union(donors))
+        self.acceptors = tuple(set(self.DEFAULT_ACCEPTORS).union(acceptors))
 
         if not (self.selection1 and self.selection2):
             raise ValueError('HydrogenBondAnalysis: invalid selections')
@@ -336,28 +389,17 @@ class HydrogenBondAnalysis(object):
     def run(self):
         """Analyze trajectory and produce timeseries.
 
-        Returns hydrogen bond data per frame (# indicates comments that are not part of the output)::
+        Returns hydrogen bond data per frame. The data are also stored
+        as :attr:`HydrogenBondAnalysis.timeseries` (see there for
+        output format).
 
-          results = [
-              [ # frame 1
-                 [ # hbond 1
-                    <donor index>, <acceptor index>, <donor string>, <acceptor string>, <distance>, <angle>
-                 ],
-                 [ # hbond 2
-                    <donor index>, <acceptor index>, <donor string>, <acceptor string>, <distance>, <angle>
-                 ],
-                 ....
-              ],
-              [ # frame 2
-                [ ... ], [ ... ], ...
-              ],
-              ...
-          ]
-
-        The data are also stored as :attr:`HydrogenBondAnalysis.timeseries`.
+        .. SeeAlso:: :meth:`HydrogenBondAnalysis.generate_table` for
+                     another way to access the data.
 
         """
         logger.info("HBond analysis: starting")
+        logger.debug("HBond analysis: donors    %r", self.donors)
+        logger.debug("HBond analysis: acceptors %r", self.acceptors)
 
         self.timeseries = []
         self._timesteps = []
@@ -430,7 +472,6 @@ class HydrogenBondAnalysis(object):
         """Calculate the Euclidean distance between two atoms.
         """
         return norm(a2.pos - a1.pos)
-
 
     def generate_table(self):
         """Generate a normalised table of the results.
